Use ImmutableLists and create swap chain images